Add api for fetching rds service credentials
