# api/swagger/rds.swagger.json
@@ -79,6 +79,42 @@
         ]
       }
     },
+    "/v0/rds/detail": {
+      "get": {
+        "operationId": "Detail",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/apiRDSDetailResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "qan_db_instance_uuid",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "server_username",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "server_password",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "RDS"
+        ]
+      }
+    },
     "/v0/rds/discover": {
       "post": {
         "operationId": "Discover",
@@ -129,6 +165,23 @@
     },
     "apiRDSAddResponse": {
       "type": "object"
+    },
+    "apiRDSDetailResponse": {
+      "type": "object",
+      "properties": {
+        "aws_access_key_id": {
+          "type": "string"
+        },
+        "aws_secret_access_key": {
+          "type": "string"
+        },
+        "region": {
+          "type": "string"
+        },
+        "instance": {
+          "type": "string"
+        }
+      }
     },
     "apiRDSDiscoverRequest": {
       "type": "object",
